# serializer version: 1
# name: test_choice_adder
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:choice/>
  </cp:parent>
  
  '''
# ---
# name: test_choice_creator
  '''
  <cp:choice xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
# name: test_choice_get_or_change_to[None]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:choice/>
  </cp:parent>
  
  '''
# ---
# name: test_choice_get_or_change_to[choice2]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:choice/>
  </cp:parent>
  
  '''
# ---
# name: test_choice_get_or_change_to[choice]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:choice/>
  </cp:parent>
  
  '''
# ---
# name: test_choice_inserter
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:choice/>
    <cp:oomChild/>
    <cp:oooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_oom_child_creator
  '''
  <cp:oomChild xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
# name: test_oom_child_inserter
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:oomChild/>
    <cp:oooChild/>
    <cp:zomChild/>
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_oom_child_private_add
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:oomChild/>
  </cp:parent>
  
  '''
# ---
# name: test_oom_child_public_add
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:oomChild/>
  </cp:parent>
  
  '''
# ---
# name: test_optional_attribute_setter[36]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties" cp:optAttr="36"/>
  
  '''
# ---
# name: test_optional_attribute_setter[None]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
# name: test_required_attribute_setter
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties" reqAttr="24"/>
  
  '''
# ---
# name: test_zom_child_adder
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:zomChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zom_child_creator
  '''
  <cp:zomChild xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
# name: test_zom_child_inserter
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:oomChild/>
    <cp:oooChild/>
    <cp:zomChild/>
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zoo_child_adder
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zoo_child_get_or_add[False]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zoo_child_get_or_add[True]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zoo_child_inserter
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties">
    <cp:oomChild/>
    <cp:oooChild/>
    <cp:zomChild/>
    <cp:zooChild/>
  </cp:parent>
  
  '''
# ---
# name: test_zoo_child_remover[False]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
# name: test_zoo_child_remover[True]
  '''
  <cp:parent xmlns:cp="http://schemas.openxmlformats.org/package/2006/metadata/core-properties"/>
  
  '''
# ---
